--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^9.12.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "prettier": "^2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
